make the hide picklist dimmer show on top of stats windows and make sure the dimmer button is always visible in the picklist page

--- a/src/pages/PicklistPage.css
+++ b/src/pages/PicklistPage.css
@@ -130,6 +130,18 @@
 
     right: 1vw;
     bottom: 1vw;
+
+    z-index: 0;
+}
+
+.privacy-button-centered {
+    position: absolute;
+    bottom: 1vw;
+    display: flex;
+
+    justify-content: center;
+
+    width: 100vw;
 }
 
 
@@ -141,6 +153,8 @@
     position: absolute;
     top: 0;
     left: 0;
+
+    z-index: 100;
 }
 
 .privacy-inactive {
